fix: Can't turn camera on mobile

--- a/sources/assets/style.css
+++ b/sources/assets/style.css
@@ -36,6 +36,8 @@
 
 :root {
     color: #231f20;
+    --distance-top: 24px;
+    --distance-right: 48px;
 }
 
 ul,
@@ -54,20 +56,25 @@ li {
     flex-direction: column;
     align-items: flex-end;
     position: fixed;
-    max-height: 100vh;
-    top: 0;
-    padding-top: 24px;
-    padding-right: 48px;
+    height: calc(100vh - (var(--distance-top) * 2));
+    top: calc(var(--distance-top) * 2);
+    padding-top: var(--distance-top);
+    padding-right: var(--distance-right);
     right: 0;
     row-gap: 24px;
     overflow: hidden;
     box-sizing: border-box;
+    transform: translateX(100%);
+    transition: transform 0.4s ease;
 }
 
 /**
 * Toggle button
 */
 .menu__toggle__trigger {
+    position: fixed;
+    top: var(--distance-top);
+    right: var(--distance-right);
     display: block;
     width: 32px;
     height: 32px;
@@ -114,6 +121,7 @@ li {
     align-items: flex-end;
     row-gap: 32px;
     width: 100%;
+    height: 100%;
     box-sizing: border-box;
     text-align: center;
     padding-bottom: 72px;
@@ -256,10 +264,11 @@ li {
         padding-left: 3%;
         padding-right: 3%;
         width: 100%;
+        height: calc(100vh - (var(--distance-top) * 3));
     }
 
-    .menu__list {
-        row-gap: 8px;
+    .menu__toggle__trigger {
+        right: 3%;
     }
 
     .menu__list__item__trigger {
@@ -272,6 +281,10 @@ li {
         right: 16px;
         height: 10px;
         width: 12px;
+    }
+
+    .menu__list {
+        row-gap: 8px;
     }
 
     .menu__list__item__list__item__label--trigger::after {
